include/mosura.h

/**
 * Every function returns one of these; details via `mosura_last_error()`.
 */
typedef enum {
  MOSURA_OK = 0,
  /**
   * NULL where a value is required, bad option key/value, bad handle kind, a released handle
   */
  MOSURA_ERR_INVALID_ARG,
  /**
   * no such function / table / operation / cache entry
   */
  MOSURA_ERR_NOT_FOUND,
  /**
   * session directory, input file, toolchain work dir
   */
  MOSURA_ERR_IO,
  /**
   * unreadable input, corrupt .tbl, unknown schema version
   */
  MOSURA_ERR_FORMAT,
  /**
   * no loader claims the file, language has no tables, op not built in
   */
  MOSURA_ERR_UNSUPPORTED,
  /**
   * the compiler could not be run (not: the source failed to compile)
   */
  MOSURA_ERR_TOOLCHAIN,
  /**
   * a progress callback returned non-zero
   */
  MOSURA_ERR_CANCELLED,
  /**
   * struct size/version mismatch, or a session written by an incompatible build
   */
  MOSURA_ERR_VERSION,
  /**
   * a panic was caught at the boundary; message = the panic text
   */
  MOSURA_ERR_INTERNAL,
} mosura_status;
/**
 * The library: spec registry, caches, log sink (opaque).
 */
typedef struct mosura_ctx mosura_ctx;
/**
 * One decompiled function (opaque).
 */
typedef struct mosura_function mosura_function;
/**
 * A validated key/value option set (opaque).
 */
typedef struct mosura_options mosura_options;
/**
 * A loaded (and possibly analyzed) binary (opaque).
 */
typedef struct mosura_program mosura_program;
/**
 * A session store: a directory or memory (opaque).
 */
typedef struct mosura_session mosura_session;
/**
 * An immutable result table with a schema (opaque).
 */
typedef struct mosura_table mosura_table;
/**
 * Diagnostic sink. `topic` is the debug topic (`sparse-switch`, `analysis`, …) or "" for
 * untopiced messages; `msg` is NUL-terminated and `msg_len` its byte length. Replaces every
 * stderr print in the library.
 */
typedef void (*mosura_log_fn)(void *user,
                              mosura_log_level level,
                              const char *topic,
                              const char *msg,
                              size_t msg_len);
/**
 * Context configuration. Starts with `size` + `version`; use MOSURA_CTX_CONFIG_INIT. The library
 * reads only the fields `size` covers.
 */
typedef struct {
  /**
   * sizeof(mosura_ctx_config)
   */
  uint32_t size;
  /**
   * 1
   */
  uint32_t version;
  /**
   * Directories searched for spec data (`.ldefs`/`.sla`/`.pspec`/`.cspec`) BEFORE the embedded
   * set — the user's override folder (`mosura data export` writes one).
   */
  const char *const *spec_dirs;
  size_t spec_dirs_len;
  /**
   * Directories searched for FID databases (`.mfid[.gz]`, `.fidb`) before the embedded ones.
   */
  const char *const *fid_dirs;
  size_t fid_dirs_len;
  /**
   * Machine-level cache for frozen specs etc. NULL = none. (Accepted; unused in this version.)
   */
  const char *cache_dir;
  mosura_log_fn log;
  void *log_user;
  /**
   * Development aid: non-zero makes the boundary re-raise an internal panic (the process dies
   * with its backtrace) instead of catching it into MOSURA_ERR_INTERNAL. Release clients
   * leave it 0.
   */
  int abort_on_panic;
} mosura_ctx_config;
/**
 * Owned bytes. Dispose exactly once with `mosura_bytes_dispose`. Zero-initialized is a valid
 * empty value.
 */
typedef struct {
  uint8_t *ptr;
  size_t len;
  size_t cap;
} mosura_bytes;
/**
 * Borrowed, immutable bytes. Lifetime = the handle documented at the producing function.
 */
typedef struct {
  const uint8_t *ptr;
  size_t len;
} mosura_view;
/**
 * Progress callback for long operations. Return non-zero to cancel; the operation then fails
 * with MOSURA_ERR_CANCELLED and leaves no partial state in the session.
 */
typedef int (*mosura_progress_fn)(void *user, const char *stage, uint64_t done, uint64_t total);
/**
 * Runtime ABI version, `(major << 16) | minor`.
 */
uint32_t mosura_abi_version(void);
/**
 * Release any handle. NULL is a no-op; a pointer that is not a live handle is refused (and
 * reported through `mosura_last_error`) rather than freed. A handle should outlive the handles
 * derived from it; the derived handles hold their own references, so releasing early is safe,
 * only surprising.
 */
void mosura_release(void *h);
/**
 * Create the library context. Thread-safe once created; everything derived from it is not,
 * unless stated. One configuration per process in this version: a second call with the same
 * override directories and panic policy answers the same context, a different one is
 * MOSURA_ERR_UNSUPPORTED.
 */
mosura_status mosura_ctx_new(const mosura_ctx_config *config, mosura_ctx **out);
/**
 * Decompile the function at `entry`. `opts` (NULL = none): decompile.global-scope,
 * decompile.proto-scope, knobs.off, and any emit.<axis> for the default rendering. The
 * decompile set is made now (or served); the handle then answers from it.
 */
mosura_status mosura_function_decompile(mosura_program *p,
                                        uint64_t entry,
                                        const mosura_options *opts,
                                        mosura_function **out);
/**
 * The C rendering under the handle's options (Ghidra's behaviour by default).
 */
mosura_status mosura_function_c(mosura_function *f, mosura_bytes *out);
/**
 * Free a buffer handed out as `mosura_bytes`; NULL or an empty value is a no-op, and the struct
 * is zeroed so a second dispose is harmless.
 */
void mosura_bytes_dispose(mosura_bytes *b);
/**
 * Everything mosura can say about a file without analysing it: one row per fact (key, value,
 * evidence). Runs on a private in-memory session.
 */
mosura_status mosura_identify(mosura_ctx *ctx, mosura_view bytes_in, mosura_table **out);
/**
 * Load an input of the session (`input` = a label or digest; NULL = the only one) into a
 * Program. `load_opts` (NULL = defaults): load.loader, load.language, load.base,
 * load.cspec-x86-32, analysis.disable, knobs.off. Served from the store when the key exists.
 */
mosura_status mosura_program_open(mosura_session *s,
                                  const char *input,
                                  const mosura_options *load_opts,
                                  mosura_program **out);
/**
 * Run auto-analysis to convergence (`opts`, NULL = none: analysis.disable, knobs.off — added to
 * the program's options). The program's key becomes the analyzed set's; a cached one returns
 * immediately.
 */
mosura_status mosura_program_analyze(mosura_program *p,
                                     const mosura_options *opts,
                                     mosura_progress_fn progress,
                                     void *progress_user);
/**
 * A program table by name ("functions", "symbols", "references", "blocks", "listing", …, and
 * the virtual "snapshot"); an empty name lists the tables. Unknown name: MOSURA_ERR_NOT_FOUND.
 */
mosura_status mosura_program_table(mosura_program *p, const char *name, mosura_table **out);
/**
 * Open or create a session. `dir == NULL` is an in-memory session (nothing persists). The
 * session's own config table supplies option defaults for every operation run in it; `config`
 * (NULL = none) is written into it.
 */
mosura_status mosura_session_open(mosura_ctx *ctx,
                                  const char *dir,
                                  const mosura_options *config,
                                  mosura_session **out);
/**
 * Add an input binary (content-addressed). `label` (NULL = "input") names it for the commands
 * and is also the file name the container dispatch sees — pass the file's name (with its
 * extension) for `.com` detection, or select the loader with `load.loader`. Re-adding identical
 * bytes is a no-op answering the same digest. `digest_hex` (NULL = not wanted) receives the
 * 64-hex blake3 digest.
 */
mosura_status mosura_session_add_input(mosura_session *s,
                                       mosura_view bytes_in,
                                       const char *label,
                                       mosura_bytes *digest_hex);
/**
 * The message for the last non-OK status on THIS thread. Valid until the next mosura call on
 * the thread. Never NULL (empty when there is none).
 */
const char *mosura_last_error(void);
/**
 * Column index by name, or MOSURA_ERR_NOT_FOUND — the way a client survives appended columns.
 */
mosura_status mosura_table_column_index(const mosura_table *t, const char *name, uint32_t *col);
/**
 * The row count (0 and a recorded error for a bad handle).
 */
uint64_t mosura_table_rows(const mosura_table *t);
/**
 * A U64 cell (any unsigned integer column widens: U8, U16, U32, U64).
 */
mosura_status mosura_table_u64(const mosura_table *t, uint64_t row, uint32_t col, uint64_t *out);
/**
 * A Str cell (UTF-8, not NUL-terminated; the view is valid for the table's life).
 */
mosura_status mosura_table_str(const mosura_table *t, uint64_t row, uint32_t col, mosura_view *out);